manifests/samples/day3/networkpolicy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np1
  labels:
    day: day3
    sample: networkpolicy
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      day: day2
      sample: sample1
      layer: dep1
  ingress:
    - from:
        - podSelector:
            matchLabels:
              day: day2
              sample: sample1
              layer: dep2
      # ports:
      #   - port: 8080
